fix dark mode color bug

--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -69,7 +69,7 @@
 .discover {
   padding-top: 128px;
   color: rgb(204, 131, 92);
-  margin-bottom: 2em;
+  margin-bottom: 1.5em;
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.25;
